Set font to Montserrat. Change background color to correct purple. Align items more to the left in about us page.

--- a/client/src/components/aboutUsPage/AboutPage.css
+++ b/client/src/components/aboutUsPage/AboutPage.css
@@ -9,8 +9,7 @@
 }
 
 .heading {
-    text-align: center;
-    font-family: 'Poppins';
+    text-align: left;
     font-style: normal;
     font-weight: 600;
     font-size: 3.5rem;
